Sedes, Campus y gestiones.

--- a/evaluacion-de-ubicacion.html
+++ b/evaluacion-de-ubicacion.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Evaluación de Ubicación</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -823,7 +823,7 @@
               <ul>
                 <li>Consulta las fechas disponibles para la evaluación de ubicación en el siguiente calendario:
 
-                  <table class="table table-responsive table-hover text-center">
+                  <table class="table table-striped">
                       <thead>
                       <tr>
                     <th scope="col" class=" text-start" width="70%">Facultad / Escuela</th>
@@ -908,24 +908,18 @@
                     </tbody>
                 </table>
 
-                <p>Más información:<br>
-                  <b>aestrada@umg.edu.gt<br>
-                  maperez@umg.edu.gt<br>
-                  silvia.cardona@umg.edu.gt<br>
-                  poes@umg.edu.gt</b>
-                </p>
                 </li>
                 <li>Al tener la fecha ya elegida, debes pagar tu Evaluación de Ubicación, puedes pagarla de dos maneras:
                     <ul>
                       <li>
                       Pagar en cualquier agencia del Banco Industrial, BAM o Banco GyT, genera tu documento de <a href="https://uvirtual.umg.edu.gt/formularios/ubicacion" target="_blank">pago aquí</a>, seleccionando la opción <b>"Otra Carrera"</b>, luego imprímelo y preséntalo en la agencia elegida.
                       <br>
-                      <img src="#">
+                     
                     </li>
                       <li>
                         O si prefieres, el pago también lo puedes realizar en línea con tarjeta de crédito o débito <a href="https://uvirtual.umg.edu.gt/pagos/" target="_blank">presionando aquí</a>, en tipo de pago selecciona la opción de <b>"Otras Carreras Campus Central"</b> (el número de carné será colocado automáticamente).
                         <br>
-                        <img src="#">
+                     
                       </li>
                     </ul>
                 </li>
@@ -939,6 +933,14 @@
                   Espera un correo con la confirmación de fecha y hora de la evaluación, así como la metodología que utilizaremos.
                 </li>
               </ul>
+
+              <p class="p-3 bg-info text-secondary lh-base">Más información:<br>
+                <b>aestrada@umg.edu.gt<br>
+                maperez@umg.edu.gt<br>
+                silvia.cardona@umg.edu.gt<br>
+                poes@umg.edu.gt</b>
+              </p>
+
         </div>
       </article>
 
