--- a/revision-de-evaluacion.html
+++ b/revision-de-evaluacion.html
@@ -9,7 +9,7 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Revisión de Evaluación </title>
   </head>
   <body class="single">
     <header class="visible">
