--- a/canvas.html
+++ b/canvas.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Canvas</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -789,29 +789,27 @@
             <div class="col-12">
               <h1 class="display-1 lh-1">
                 <b>CANVAS</b>
-              </h1>
+              </h1><br>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p class="text-body mt-2">
-                A partir del 2022, la UMG utilizará CANVAS como plataforma para todos los cursos virtuales.
-              </p>
+            
               <p>
-                ¿Cómo puedo acceder a Canvas?
+               <strong> ¿Cómo puedo acceder a Canvas?</strong>
               </p>
               <p>
                 Puedes ingresar a Canvas aquí. Debes seleccionar en el apartado de <b>"Cursos virtuales y aplicaciones educativas"</b>. Recuerda que si ya tienes iniciada sesión, debes seleccionar la cuenta de la Universidad. Si no puedes ingresar de forma automática a Canvas, utiliza tu usuario y contraseña proporcionada por la Universidad.
-              </p>
-              <p>Sesión informativa para alumnos de nuevo ingreso</p>
+              </p><br>
+              <p>Sesión informativa para alumnos de nuevo ingreso:</p><br>
 
-              <center><iframe width="560" height="315" src="https://www.youtube.com/embed/vE0Z_6gET0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
+              <center><iframe width="560" height="315" src="https://www.youtube.com/embed/vE0Z_6gET0A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center><br>
 
-              <p>Orientación para alumnos de reingreso</p>
+              <p>Orientación para alumnos de reingreso:</p><br>
 
-              <center><iframe width="560" height="315" src="https://www.youtube.com/embed/D2rNEKLtI_M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
+              <center><iframe width="560" height="315" src="https://www.youtube.com/embed/D2rNEKLtI_M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center><br>
 
-              <p>Si tienes problemas con algún servicio o con tu contraseña, puedes visitar nuestra sección de <a href="https://umg.edu.gt/soporte">Soporte</a> o <a href="#"> Preguntas frecuentes</a>.</p>
+             
         </div>
       </article>
 
