--- a/google-apps.html
+++ b/google-apps.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Google Apps</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -789,13 +789,13 @@
             <div class="col-12">
               <h1 class="display-1 lh-1">
                 Google Apps <b>UMG</b>
-              </h1>
+              </h1><br>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <h2>Introducción:</h2>
-              <p class="text-body mt-2">
+           
+              <p class="p-3 bg-info text-secondary lh-base">
                 Google Apps es una Suite de Google ©. Cómo estudiante y catedrático de la Universidad tienes derecho a utilizar este recurso.
               </p>
               <p>Con dicha licencia puedes hacer uso entre otros a:</p>
