--- a/parqueos.html
+++ b/parqueos.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Parqueos</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -789,14 +789,12 @@
             <div class="col-12">
               <h1 class="display-1 lh-1">
                 <b>Parqueos</b>
-              </h1>
+              </h1><br>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p class="text-body mt-2">
-                Renovación | Segundo semestre 2023
-              </p>
+           
               <blockquote class="p-3 bg-info text-secondary lh-base">
                 <p class="mb-0">
                   Los alumnos que tuvieron asignado parqueo en el primer semestre de 2023 y que ya estén debidamente asignados en el semestre que corresponde, pueden renovar su derecho de parqueo del 04 al 15 de julio 2023.
