--- a/huehuetenango.en.html
+++ b/huehuetenango.en.html
@@ -759,7 +759,7 @@
               </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label>Graduates
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label>Graduates
               </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
@@ -790,7 +790,7 @@
                 <div class="row">
                   <div class="col-6 contacto_info" style="border-right: 1px solid #2c557d;">
                     <h4>Huehuetenango</h4>
-                    <p>6ª avenida 1-197, zona 08, Proyecto San José<br> Huehuetenango, Huehuetenango.<br> PBX:  79641199.
+                    <p>6ª avenida 1-197, zone 08, Proyecto San José<br> Huehuetenango, Huehuetenango.<br> PBX:  79641199.
                       <br><br> <a href="mailto:huehuetenango@umg.edu.gt">huehuetenango@umg.edu.gt</a>
                     </p>
                     <br><p><strong>Office hours:</strong> Monday to Friday from 07:00 to 20:00 hours. <br>Saturday from 08:00 to 17:00 hours.</p>
@@ -1346,7 +1346,7 @@
           <div class="row">
             <div class="col-12">
               <h5>
-                Center Services
+                Services Center
               </h5><br><br>
             </div>
           </div>
