--- a/campus-central.en.html
+++ b/campus-central.en.html
@@ -749,7 +749,7 @@
                   <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>36</label> Faculties</h2>
                 </div>
                 <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-                  <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Graduated </h2>
+                  <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Graduated </h2>
                 </div>
                 <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
                   <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>147</label> Active <br>careers</h2>
@@ -1394,8 +1394,7 @@
           <div class="row">
             <div class="col-12">
               <h5>
-                Center Services
-
+                Services Center
               </h5><br><br>
             </div>
           </div>
