--- a/facultadOdontologia.html
+++ b/facultadOdontologia.html
@@ -630,7 +630,7 @@
         </div>
         <div class="nav z-index flex-row align-items-center">
           <div class="i18n text-light">
-            <a href="#" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="#" class="text-decoration-none text-light">ENG</a>
+            <a href="facultadOdontologia.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="facultadOdontologiaEN.html" class="text-decoration-none text-light">ENG</a>
           </div>
           <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
             <img src="img/miumg.svg" alt="miumg">
@@ -840,9 +840,9 @@
         </div>
         <div class="row">
           <div class="col-12 mt-2 mb-3 py-5">
-            <video controls oncontextmenu="return false">
-              <source src="video/odontologia-espanol.mp4" type="video/mp4">
-            </video>
+            <div class="ratio ratio-16x9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/B6MbNU3ZCSM?si=SmxEprXGpi3zsZdI" allowfullscreen ="border-radius: 25px;"></iframe>
+            </div>
           </div>
           <div class="marca">
             <!-- Nosotros -->
