--- a/jutiapa.html
+++ b/jutiapa.html
@@ -618,7 +618,7 @@
           </div>
           <div class="nav z-index flex-row align-items-center">
             <div class="i18n text-light">
-              <a href="index.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="index.en.html" class="text-decoration-none text-light">ENG</a>
+              <a href="jutiapa.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="jutiapa.en.html" class="text-decoration-none text-light">ENG</a>
             </div>
             <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
               <img src="img/miumg.svg" alt="miumg">
@@ -1042,7 +1042,7 @@
         <div class="container-fliud">
           <div class="row">
             <div class="col-12">
-             <a href="#" class="d-block position-relative">
+             <a href="https://tours.socialmediaumg.link/jutiapa/" target="_blank"  class="d-block position-relative">
               <img src="img/jutiapa/jutiapa-tour.webp" class="img-fluid" alt="Jutiapa">
              </a>
             </div>
