--- a/sacatepequez.html
+++ b/sacatepequez.html
@@ -180,7 +180,7 @@
                             Oferta <span>Académica</span>
                           </h6>
                           <figure class="figure position-relative mb-0">
-                            <img src="/img/menu/OfertaAcademica.f.webp" class="figure-img mb-0 pt-xl-1">
+                            <img src="img/menu/OfertaAcademica.f.webp" class="figure-img mb-0 pt-xl-1">
                             <figcaption class="figure-caption estudiante position-absolute text-center lh-1 py-2 px-3 ff-Urbanist-xli">
                               Sandy Lopez <b class="d-block">Escuela&nbsp;de&nbsp;Hotelería&nbsp;y&nbsp;Turismo,&nbsp;UMG</b>
                             </figcaption>
@@ -617,10 +617,10 @@
           </div>
           <div class="nav z-index flex-row align-items-center">
             <div class="i18n text-light">
-              <a href="index.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="index.en.html" class="text-decoration-none text-light">ENG</a>
+              <a href="sacatepequez.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="sacatepequez.html" class="text-decoration-none text-light">ENG</a>
             </div>
             <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
-              <img src="/img/miumg.svg" alt="miumg">
+              <img src="img/miumg.svg" alt="miumg">
             </button>
             <button class="s border border-0 d-block ln-1">
               <i class="fi fi-br-search"></i>
@@ -747,10 +747,10 @@
           <div class="row">
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
               
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>152</label> Aulas</h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>102</label> Aulas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Egresados </h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Egresados </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>19</label> Carreras <br>  activas</h2>
