--- a/villa-nueva.html
+++ b/villa-nueva.html
@@ -618,7 +618,7 @@
           </div>
           <div class="nav z-index flex-row align-items-center">
             <div class="i18n text-light">
-              <a href="index.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="index.en.html" class="text-decoration-none text-light">ENG</a>
+              <a href="villa-nueva.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="villa-nueva.en.html" class="text-decoration-none text-light">ENG</a>
             </div>
             <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
               <img src="img/miumg.svg" alt="miumg">
@@ -746,7 +746,7 @@
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>115</label> Aulas <br>modernas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Egresados </h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Egresados </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>31</label> Carreras <br>  activas</h2>
@@ -1045,7 +1045,7 @@
         <div class="container-fliud">
           <div class="row">
             <div class="col-12">
-             <a href="#" class="d-block position-relative">
+             <a href="https://tours.socialmediaumg.link/villanueva/" target="_blank" class="d-block position-relative">
               <img src="img/villa_nueva/villa_nueva_tour.webp" class="img-fluid" alt="Villa Nueva">
              </a>
             </div>
