Gestiones y datos de Centros Universitarios

--- a/cuenta-corriente.html
+++ b/cuenta-corriente.html
@@ -16,7 +16,7 @@
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -796,14 +796,14 @@
             <div class="col-12 fs-sm-5 text-secondary">
               <br>
               <p>Unidad encargada de resolver todas las dudas sobre los adeudos o saldos en el estado de cuenta de los alumnos, en Campus Central y Centros Universitarios.
-                <br>
+                <br><br>
               Entre la resolución de consultas atendidas se encuentran:</p>
               <ul>
                 <li>Inconvenientes con pagos realizados en agencias bancarias con boleta o a través de la banca en línea.</li>
                 <li>Inconvenientes con pagos realizados con tarjeta de crédito o débito desde mi UMG.</li>
                 <li>Búsqueda y verificación de pagos no reflejados en los estados de cuenta de los alumnos.</li>
                 <li>Orientación para devoluciones de pagos realizados desde mi UMG y banca en línea.</li>
-              </ul>
+              </ul><br>
               <p><b>Contacto:</b><br>
                 2411 1800 ext. 1226, 1227, 1228<br>
                 Lunes a viernes: 08:00 am a 09:00 pm<br>
