--- a/nuevos-estudiantes.html
+++ b/nuevos-estudiantes.html
@@ -788,42 +788,66 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                <b>Nosotros</b>
+                Admisiones <b>nuevos estudiantes</b>
               </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                <b>Universidad Mariano Gálvez de Guatemala</b>, es una institución de educación superior, privada, independiente, no lucrativa, que funciona de acuerdo con las leyes propias de su naturaleza institucional, aprobada el 29 de enero de 1966 por el Consejo Supremo Universitario de la Universidad de San Carlos de Guatemala.
-              </p>
-              <h2>Orígenes y Filosofía</h2>
-              <p>
-                La Universidad Mariano Gálvez , es una institución de educación superior, privada, independiente, no lucrativa, que funciona de acuerdo con las leyes propias de su naturaleza institucional, que fue aprobada el 29 de Enero de 1966, por el Consejo Supremo Universitario de la Universidad de San Carlos de Guatemala.
-              </p>
-              <p>
-                Su nombre hace honor al eximio estadista, prócer y preclaro jurisconsulto <b>Doctor José Mariano Gálvez</b> (Jefe del Estado de Guatemala 1831-1838), fundador de la Academia de Estudios y reformador de la educación guatemalteca, quien promovió importantes innovaciones en todos los órdenes de la vida del Estado. Se le atribuye el mejoramiento de la instrucción pública. Luchó por que la enseñanza fuera laica, fue fundador de la Biblioteca y Museo Nacional, respetó las leyes y garantías individuales, libertad de prensa y emisión del pensamiento.
-              </p>
-              <p>
-                De acuerdo con sus principios Institucionales, la Universidad Mariano Gálvez atiende, esencialmente, a la formación ética, científica, profesional y técnica de los estudiantes, mediante el ejercicio integrado de la docencia, la investigación y el servicio a la comunidad e independencia normativa, académica, administrativa, disciplinaria y económica; a la conservación y desarrollo de la ciencia y de la cultura como patrimonio universal; al fomento de la investigación como fuente de conocimiento y de progreso y al estudio de los problemas nacionales con el objeto de contribuir a su solución.
-              </p>
-              <p>Los ideales que inspiraron a sus fundadores se mantienen vigentes, pues es preocupación de la Universidad en su que hacer docente, la formación integral de sus estudiantes en un ambiente de libertad, respeto mutuo y espíritu de convivencia.
-              </p>
-              <h1>Misión</h1>
-              <p>
-                Formar, en niveles de excelencia académica y de acuerdo con las necesidades y demandas de la sociedad, profesionales, investigadores, técnicos y docentes científicamente competentes, éticamente responsables y socialmente abiertos al cambio progresista, mediante el desarrollo integrado de la docencia, la investigación y el servicio a la comunidad, a fin que ésta tenga la oportunidad de participar de los beneficios de la ciencia, la tecnología y la cultura.
-              </p>
-              <p>
-                Asimismo, que sus graduados sean capaces de conservar, acrecentar y difundir la cultura universal, afirmando los valores propios e inmersos en el proceso productivo del país, y que contribuyan con espíritu crítico a la solución de los problemas nacionales.
-              </p>
-              <h1>Visión</h1>
-              <p>
-                Ser una institución de educación superior altamente competitiva, líder en su género, innovadora y creadora de conocimientos científicos y tecnológicos, en la que sus educandos alcancen una formación integral, armónica y potencien sus aptitudes y capacidades, en un ambiente de libertad y aceptación de los supremos valores del cristianismo.
-              </p>
-              <p>Y que sus egresados, sean capaces de asumir los desafíos del mundo contemporáneo y de una sociedad cambiante, comprometidos con el desarrollo económico, social, político y cultural del país, en permanente interacción con el entorno nacional, con renovada vocación de servicio y espíritu de solidaridad.
-              </p>
-            </div>
-          </div>
+              <br>
+              <h1>Requisitos de Admisión</h1>
+              <blockquote class="p-3 bg-info text-secondary lh-base">
+                  La documentación deberá ser entregada en la oficina de Registro y Control Académico
+                </blockquote>
+              <br>
+              <h3>Para recién graduado</h3>
+            
+                  <li>Constancia de <a href="#">Evaluación de Ubicación (Campus Central)</a>.</li>
+                   <li>Completar <a href="https://umg.edu.gt/nuevosestudiantes" target="_blank">Formulario de Nuevo Estudiante</a>.</li>
+                  <li>Original y fotocopia de DPI o pasaporte.</li>
+                  <li>Certificacion original de Básicos y Diversificado.</li>
+                  <li>Fotostática de título de 5 x 7 pulgadas. (sellado por Contraloría de Cuentas).</li>
+                  <li>Dos fotografías recientes tamaño Cédula.</li>
+                  <li>Efectuar los pagos de inscripción correspondientes.</li>
+                  </ul>
+                  <br>
+
+              <h3>Para aspirante Extranjero</h3>
+                  <ul>
+                  <li>En el país donde el interesado cursó y aprobó sus estudios, el Cónsul de Guatemala debe autenticar su diploma o título y el certificado de cursos aprobados.</li>
+                  <li>El Ministerio de Relaciones Exteriores autentica la firma del Cónsul.</li>
+                  <li>Los documentos deben ser traducidos al castellano por un traductor jurado cuando el caso lo amerite.</li>
+                  <li>La Universidad estudia la documentación para establecer la equivalencia de cursos aprobados. Posteriormente se señalarán las clases y el ciclo que podrá cursar el interesado en la carrera de su elección.</li>
+                  </ul>
+
+                  <p>El alumno debe satisfacer todos los requisitos de matrícula de Inscripción, incluyendo la presentación de los siguientes documentos:</p>
+                  <br>
+
+                  <ul>
+                  <li>Boleta de aprobación de Evaluación de Ubicación (Campus Central).</li>
+                  <li>Fotocopia de DPI ó pasaporte.</li>
+                  <li>Fotostática del título o diploma de nivel medio de 5 X 7 pulgadas, con trámites legales.</li>
+                  <li>Certificación de cursos de nivel medio con trámites legales.</li>
+                  <li>Dos fotografías recientes tamaño cédula.</li>
+                  </ul>
+                  <br>
+
+            <h3>Para traslado de otra Universidad</h3>
+                  <ul>
+                  <li>Certificación de matrícula.</li>
+                  <li>Certificación de estudios (ambas de Universidad de procedencia).</li>
+                  </ul>
+
+
+<a href="#" data-bs-toggle="tooltip" title="Some text">Hover over me</a>
+
+<script>
+  $(document).ready(function(){
+      $('[data-bs-toggle="tooltip"]').tooltip();   
+  });
+  </script>
+
+
         </div>
       </article>
 
@@ -1063,6 +1087,7 @@
     </main>
 
     <script src="js/jquery.js"></script>
+    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <!-- -->
     <script src="app.js"></script>
