--- a/campus-central.en.html
+++ b/campus-central.en.html
@@ -746,7 +746,7 @@
             <div class="row">
                 <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
                   
-                  <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>36</label> Faculties</h2>
+                  <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>470</label>  Modern <br>classrooms</h2>
                 </div>
                 <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
                   <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Graduated </h2>
