--- a/pronto-pago.html
+++ b/pronto-pago.html
@@ -788,42 +788,30 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                <b>Nosotros</b>
+                Pronto <b>pago</b> </b>
               </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                <b>Universidad Mariano Gálvez de Guatemala</b>, es una institución de educación superior, privada, independiente, no lucrativa, que funciona de acuerdo con las leyes propias de su naturaleza institucional, aprobada el 29 de enero de 1966 por el Consejo Supremo Universitario de la Universidad de San Carlos de Guatemala.
-              </p>
-              <h2>Orígenes y Filosofía</h2>
-              <p>
-                La Universidad Mariano Gálvez , es una institución de educación superior, privada, independiente, no lucrativa, que funciona de acuerdo con las leyes propias de su naturaleza institucional, que fue aprobada el 29 de Enero de 1966, por el Consejo Supremo Universitario de la Universidad de San Carlos de Guatemala.
-              </p>
-              <p>
-                Su nombre hace honor al eximio estadista, prócer y preclaro jurisconsulto <b>Doctor José Mariano Gálvez</b> (Jefe del Estado de Guatemala 1831-1838), fundador de la Academia de Estudios y reformador de la educación guatemalteca, quien promovió importantes innovaciones en todos los órdenes de la vida del Estado. Se le atribuye el mejoramiento de la instrucción pública. Luchó por que la enseñanza fuera laica, fue fundador de la Biblioteca y Museo Nacional, respetó las leyes y garantías individuales, libertad de prensa y emisión del pensamiento.
-              </p>
-              <p>
-                De acuerdo con sus principios Institucionales, la Universidad Mariano Gálvez atiende, esencialmente, a la formación ética, científica, profesional y técnica de los estudiantes, mediante el ejercicio integrado de la docencia, la investigación y el servicio a la comunidad e independencia normativa, académica, administrativa, disciplinaria y económica; a la conservación y desarrollo de la ciencia y de la cultura como patrimonio universal; al fomento de la investigación como fuente de conocimiento y de progreso y al estudio de los problemas nacionales con el objeto de contribuir a su solución.
-              </p>
-              <p>Los ideales que inspiraron a sus fundadores se mantienen vigentes, pues es preocupación de la Universidad en su que hacer docente, la formación integral de sus estudiantes en un ambiente de libertad, respeto mutuo y espíritu de convivencia.
-              </p>
-              <h1>Misión</h1>
-              <p>
-                Formar, en niveles de excelencia académica y de acuerdo con las necesidades y demandas de la sociedad, profesionales, investigadores, técnicos y docentes científicamente competentes, éticamente responsables y socialmente abiertos al cambio progresista, mediante el desarrollo integrado de la docencia, la investigación y el servicio a la comunidad, a fin que ésta tenga la oportunidad de participar de los beneficios de la ciencia, la tecnología y la cultura.
-              </p>
-              <p>
-                Asimismo, que sus graduados sean capaces de conservar, acrecentar y difundir la cultura universal, afirmando los valores propios e inmersos en el proceso productivo del país, y que contribuyan con espíritu crítico a la solución de los problemas nacionales.
-              </p>
-              <h1>Visión</h1>
-              <p>
-                Ser una institución de educación superior altamente competitiva, líder en su género, innovadora y creadora de conocimientos científicos y tecnológicos, en la que sus educandos alcancen una formación integral, armónica y potencien sus aptitudes y capacidades, en un ambiente de libertad y aceptación de los supremos valores del cristianismo.
-              </p>
-              <p>Y que sus egresados, sean capaces de asumir los desafíos del mundo contemporáneo y de una sociedad cambiante, comprometidos con el desarrollo económico, social, político y cultural del país, en permanente interacción con el entorno nacional, con renovada vocación de servicio y espíritu de solidaridad.
-              </p>
-            </div>
-          </div>
+              <br>
+              <p>Este pago es para estudiantes que desean pagar el semestre completo en el caso de Pregrado (licenciaturas) o bien el trimestre completo en el caso de Posgrados (maestrías).<br>
+<br>Se aplica un descuento, sobre los cursos asignados.
+<br>Debe realizarse sobre el período de Asignación Ordinaria (de cada facultad).</p>
+
+<p>Para este pago debes seguir éstos pasos:</p>
+
+<ul>
+<li>Debes ingresar a <a href="https://apps.umg.edu.gt" target="_blank">MiUMG</a> con tus datos de proporcionados por la Universidad.</li>
+<li>Cuando ingreses, debes buscar el módulo de <strong>"Efectuar pagos y generar formularios"</strong> y busca la opción de <strong>Pronto Pago</strong>, completa el formulario y sigue las indicaciones. 
+
+
+</li>
+
+<li>Luego imprímelo  y preséntalo en cualquier agencia del Banco Industrial, BAM o Banco GyT. </li>
+<li>También puedes efectuar tu pago en banca en línea de los bancos antes mencionados o por medio de Tarjeta de Crédito o Débito eligiendo el tipo de pago 111 bajo la descripción “Pronto Pago”.</li>
+
+</ul>
         </div>
       </article>
 
