--- a/info.html
+++ b/info.html
@@ -616,7 +616,7 @@
           </div>
           <div class="nav z-index flex-row align-items-center">
             <div class="i18n text-light">
-              <a href="index.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="index.en.html" class="text-decoration-none text-light">ENG</a>
+              <a href="info.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="info.en.html" class="text-decoration-none text-light">ENG</a>
             </div>
             <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
               <img src="img/miumg.svg" alt="miumg">
