--- a/normas-financieras.html
+++ b/normas-financieras.html
@@ -639,7 +639,7 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                Normas <b>Fiancieras</b>
+                Normas <b>Financieras</b>
               </h1>
             </div>
           </div>
