Gestiones español e inglés.

--- a/calendario-arquitectura.html
+++ b/calendario-arquitectura.html
@@ -641,24 +641,31 @@
               <h1 class="display-1 lh-1">
                 Calendario <b>Facultad de Arquitectura</b>
               </h1>
+             
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <table class="table">
+
+              <div class="alert alert-primary" role="alert">
+                <p>
+                  También puedes consultar, el calendario de  <a href="calendario-ciencias-medicas.html">Ciencias Médicas y de la Salud (Nutrición, Fisioterapia, Veterinaria, Enfermería)</a>, <a href="calendario-odontologia.html">Odontología</a>, <a href="calendario-traduccion-ingles-espanol.html">Traducción Español-Inglés</a>, <a href="calendario-gestion-publica.html">Gestión Pública</a> y <a href="calendario-academico.html">Calendario General</a></p>
+                </div>
+
+              <table class="table table-striped">
   <tbody>
   </tbody><thead>
     <tr style="padding-bottom: 20px;">
       <th>FEBRERO 2023</th>
-      <th th="" style="width:200px;">FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
-    <td style="text-align: left;">Inicio de clases 600‐665‐605D‐680‐610‐625‐630‐645‐612‐678</td>
+    <td style="text-align: left;">Inicio de clases </td>
     <td style="text-align: center;">FEB 01</td>
   </tr>
   <tr>
-    <td style="text-align: left;">Inicio de clases 605F‐616‐621‐636‐641‐671‐676‐678F</td>
+    <td style="text-align: left;">Inicio de clases </td>
     <td style="text-align: center;">FEB 03</td>
   </tr>
   <tr>
@@ -677,7 +684,7 @@
   </thead><thead>
     <tr style="padding-bottom: 20px;">
       <th>MARZO 2023</th>
-      <th th="" style="width:200px;">FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -688,7 +695,7 @@
   </tbody><thead>
   <tr>
     <th>ABRIL 2023</th>
-    <th>FECHA</th>
+    <th style="width:200px;  text-align: center;">FECHA</th>
   </tr>
   </thead>
   <tbody><tr>
@@ -706,7 +713,7 @@
   </tbody><thead>
   <tr>
     <th>MAYO 2023</th>
-    <th>FECHA</th>
+    <th style="width:200px;  text-align: center;">FECHA</th>
   </tr>
   </thead>
   <tbody><tr>
@@ -716,15 +723,15 @@
 </tbody><thead>
   <tr>
     <th>JUNIO 2023</th>
-    <th>FECHA</th>
+    <th style="width:200px;  text-align: center;">FECHA</th>
   </tr>
   </thead>
   <tbody><tr>
-    <td style="text-align: left;">Último día de clases 600‐665‐605D‐680‐610‐625‐630‐645‐612‐678</td>
+    <td style="text-align: left;">Último día de clases</td>
     <td style="text-align: center;">JUN 09</td>
   </tr>
   <tr>
-    <td style="text-align: left;">Último día de clases 605F‐616‐621‐636‐641‐671‐676‐678F</td>
+    <td style="text-align: left;">Último día de clases</td>
     <td style="text-align: center;">JUN 10</td>
   </tr>
   <tr>
@@ -754,7 +761,7 @@ julio.</td>
 </tbody><thead>
   <tr>
     <th>JULIO 2023</th>
-    <th>FECHA</th>
+    <th style="width:200px;  text-align: center;">FECHA</th>
   </tr>
   </thead>
   <!-- <tr>
@@ -771,11 +778,11 @@ julio.</td>
     <td style="text-align: center;">JUL 03</td>
   </tr>
   <tr>
-    <td style="text-align: left;">Inicio de clases 600‐665‐605D‐680‐610‐625‐630‐645‐612‐678</td>
+    <td style="text-align: left;">Inicio de clases</td>
     <td style="text-align: center;">JUL 04</td>
   </tr>
   <tr>
-    <td style="text-align: left;">Inicio de clases 605F‐616‐621‐636‐641‐671‐676‐678F</td>
+    <td style="text-align: left;">Inicio de clases</td>
     <td style="text-align: center;">JUL 07</td>
   </tr>
   <tr>
@@ -786,7 +793,7 @@ julio.</td>
 </tbody><thead>
   <tr>
     <th>AGOSTO 2023</th>
-    <th>FECHA</th>
+    <th style="width:200px;  text-align: center;">FECHA</th>
   </tr>
   </thead>
   <tbody><tr>
@@ -801,7 +808,7 @@ julio.</td>
 </tbody><thead>
   <tr>
     <th>SEPTIEMBRE 2023</th>
-    <th>FECHA</th>
+    <th style="width:200px;  text-align: center;">FECHA</th>
   </tr>
   </thead>
   <tbody><tr>
@@ -816,7 +823,7 @@ julio.</td>
 </tbody><thead>
   <tr>
     <th>OCTUBRE 2023</th>
-    <th>FECHA</th>
+    <th style="width:200px;  text-align: center;">FECHA</th>
   </tr>
   </thead>
   <tbody><tr>
@@ -832,7 +839,7 @@ julio.</td>
 </tbody><thead>
   <tr>
     <th>NOVIEMBRE 2023</th>
-    <th>FECHA</th>
+    <th style="width:200px;  text-align: center;">FECHA</th>
   </tr>
   </thead>
   <tbody><tr>
@@ -844,11 +851,11 @@ julio.</td>
     <td style="text-align: center;">NOV 02</td>
   </tr>
   <tr>
-    <td style="text-align: left;">Último día de clases 600‐665‐605D‐680‐610‐625‐630‐645‐612‐678</td>
+    <td style="text-align: left;">Último día de clases </td>
     <td style="text-align: center;">NOV 10</td>
   </tr>
   <tr>
-    <td style="text-align: left;">Último día de clases 605F‐616‐621‐636‐641‐671‐676‐678F</td>
+    <td style="text-align: left;">Último día de clases </td>
     <td style="text-align: center;">NOV 11</td>
   </tr>
   <tr>
@@ -863,7 +870,7 @@ julio.</td>
 </tbody><thead>
   <tr>
     <th>DICIEMBRE 2023</th>
-    <th>FECHA</th>
+    <th style="width:200px;  text-align: center;">FECHA</th>
   </tr>
   </thead>
   <tbody><tr>
