--- a/calendario-ciencias-medicas.html
+++ b/calendario-ciencias-medicas.html
@@ -645,13 +645,21 @@
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>Nutrición, Fisioterapia, Veterinaria, Enfermería</p>
-              <table class="table">
+              <h2>Nutrición, Fisioterapia, Veterinaria y  Enfermería.</h2><br>
+
+              <div class="alert alert-primary" role="alert">
+                <p>
+                  También puedes consultar, el calendario de <a href="calendario-arquitectura.html">Arquitectura</a>, <a href="calendario-odontologia.html">Odontología</a>, <a href="calendario-traduccion-ingles-espanol.html">Traducción Español-Inglés</a>, <a href="calendario-gestion-publica.html">Gestión Pública</a> y <a href="calendario-academico.html">Calendario General</a>.</p>
+                 
+                  </div>
+                </div>
+
+              <table class="table table-striped">
   <tbody>
   </tbody><thead>
     <tr style="padding-bottom: 20px;">
       <th>ENERO 2023</th>
-      <th style="width:200px;">FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -669,7 +677,7 @@
   </tbody><thead>
     <tr>
       <th>FEBRERO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -687,7 +695,7 @@
   </tbody><thead>
     <tr>
       <th>MARZO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -697,7 +705,7 @@
   </tbody><thead>
     <tr>
       <th>ABRIL 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -711,7 +719,7 @@
   </tbody><thead>
     <tr>
       <th>MAYO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -725,7 +733,7 @@
   </tbody><thead>
     <tr>
       <th>JUNIO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -751,7 +759,7 @@
   </tbody><thead>
     <tr>
       <th>JULIO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -777,7 +785,7 @@
   </tbody><thead>
     <tr>
       <th>AGOSTO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -795,7 +803,7 @@
   </tbody><thead>
     <tr>
       <th>SEPTIEMBRE 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -809,7 +817,7 @@
   </tbody><thead>
     <tr>
       <th>OCTUBRE 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -827,7 +835,7 @@
   </tbody><thead>
     <tr>
       <th>NOVIEMBRE 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -857,7 +865,7 @@
   </tbody><thead>
     <tr>
       <th>DICIEMBRE 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
