--- a/calendario-gestion-publica.html
+++ b/calendario-gestion-publica.html
@@ -645,12 +645,18 @@
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <table>
+              <div class="alert alert-primary" role="alert">
+              <p>
+                También puedes consultar, el calendario de <a href="calendario-arquitectura.html">Arquitectura</a>, <a href="calendario-ciencias-medicas.html">Ciencias Médicas y de la Salud (Nutrición, Fisioterapia, Veterinaria, Enfermería)</a>, <a href="calendario-odontologia.html">Odontología</a>, <a href="calendario-traduccion-ingles-espanol.html">Traducción Español-Inglés</a> y <a href="calendario-academico.html">Calendario General</a>. </p>
+              </div>
+                </div>
+
+              <table class="table table-striped">
   <tbody>
   </tbody><thead>
     <tr>
       <th>ENERO 2021</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr> 
   </thead>
   <tbody><tr>
@@ -660,7 +666,7 @@
   </tbody><thead>
     <tr>
       <th>FEBRERO 2021</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -678,7 +684,7 @@
   </tbody><thead>
     <tr>
       <th>MARZO 2021</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -688,7 +694,7 @@
   </tbody><thead>
     <tr>
       <th>MAYO 2021</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -698,7 +704,7 @@
   </tbody><thead>
     <tr>
       <th>JUNIO 2021</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -709,7 +715,7 @@
   </tbody><thead>
     <tr>
       <th>JULIO 2021</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -723,7 +729,7 @@
   </tbody><thead>
     <tr>
       <th>AGOSTO 2021</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -733,7 +739,7 @@
   </tbody><thead>
     <tr>
       <th>OCTUBRE 2021</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -743,7 +749,7 @@
   </tbody><thead>
     <tr>
       <th>NOVIEMBRE 2021</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
