--- a/calendario-odontologia.html
+++ b/calendario-odontologia.html
@@ -645,12 +645,19 @@
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <table class="table">
+
+              <div class="alert alert-primary" role="alert">
+                <p>
+                También puedes consultar, el calendario de <a href="calendario-arquitectura.html">Arquitectura</a>, <a href="calendario-ciencias-medicas.html">Ciencias Médicas y de la Salud (Nutrición, Fisioterapia, Veterinaria, Enfermería)</a>, <a href="calendario-traduccion-ingles-espanol.html">Traducción Español-Inglés</a>, <a href="calendario-gestion-publica.html">Gestión Pública</a> y <a href="calendario-academico.html">Calendario General</a>. </p>
+              
+                </div>
+
+              <table class="table table-striped">
   <tbody>
   </tbody><thead>
     <tr style="padding-bottom: 20px;">
       <th>ENERO 2023</th>
-      <th style="width:200px;">FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -692,7 +699,7 @@
   </tbody><thead>
     <tr>
       <th>FEBRERO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -714,7 +721,7 @@
   </tbody><thead>
     <tr>
       <th>MARZO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -724,7 +731,7 @@
   </tbody><thead>
     <tr>
       <th>ABRIL 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -742,7 +749,7 @@
   </tbody><thead>
     <tr>
       <th>Mayo 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -756,7 +763,7 @@
   </tbody><thead>
     <tr>
       <th>Junio 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -787,7 +794,7 @@
   </tbody><thead>
     <tr>
       <th>JULIO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -814,7 +821,7 @@
   </tbody><thead>
     <tr>
       <th>AGOSTO 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -841,7 +848,7 @@
   </tbody><thead>
     <tr>
       <th>SEPTIEMBRE 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -851,7 +858,7 @@
 </tbody><thead>
     <tr>
       <th>OCTUBRE 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
@@ -873,7 +880,7 @@
 </tbody><thead>
     <tr>
       <th>Noviembre 2023</th>
-      <th>FECHA</th>
+      <th style="width:200px;  text-align: center;">FECHA</th>
     </tr>
   </thead>
   <tbody><tr>
