--- a/calendario-traduccion-ingles-espanol.html
+++ b/calendario-traduccion-ingles-espanol.html
@@ -645,9 +645,17 @@
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
+
+              <div class="alert alert-primary" role="alert">
+                <p>
+                También puedes consultar, el calendario de <a href="calendario-arquitectura.html">Arquitectura</a>, <a href="calendario-ciencias-medicas.html">Ciencias Médicas y de la Salud (Nutrición, Fisioterapia, Veterinaria, Enfermería)</a>, <a href="calendario-odontologia.html">Odontología</a> y <a href="calendario-gestion-publica.html">Gestión Pública</a> y <a href="calendario-academico.html">Calendario General</a>.</p>
+             
+                </div>
+
+
               <br>
-              <h2>Aplica para Campus Central y Centros Universitarios</h2>
-              <h3>Cursos Regulares 2,023</h3>
+              <h2>Aplica para Campus Central y Centros Universitarios</h2><br>
+              <h3>Cursos Regulares 2,023</h3><br>
               <h4> 1er. Bimestre</h4>
               <ul>
               <li class="asoc">
@@ -656,8 +664,8 @@
               <li class="asoc">
                 <p>Inscripción Ordinaria: <b>Enero 15 al 25 de Febrero</b></p>
               </li>
-            </ul>
-              <table class="table" style="width: 100%;">
+            </ul><br>
+              <table class="table table-striped">
               <thead>
             <tr><th>Inicio de Clases</th>
             <th>Inscripción Ordinaria</th>
@@ -687,8 +695,8 @@
               <li class="asoc">
                 <p>IInscripción Ordinaria: <b>Abril 23 al 13 de mayo</b></p>
               </li>
-            </ul>
-            <table class="table" style="width: 100%;">
+            </ul><br>
+            <table  class="table table-striped">
       <thead>
     <tr><th>Inicio de Clases</th>
     <th>Inscripción Ordinaria</th>
@@ -710,7 +718,7 @@
         </td>
       </tr>
     </tbody>
-</table>
+</table><br>
 <p><b>ASUETOS</b></p>
 <ul>
   <li>03 al 09 de abril Semana Santa</li>
@@ -721,8 +729,8 @@
 <ul>
   <li>Exámenes de Ubicación: <b>Junio 25 al 08 de julio</b></li>
   <li>Inscripción Ordinaria: <b>Junio 25 al 22 de julio</b></li>
-</ul>
-<table class="table" style="width: 100%;">
+</ul><br>
+<table class="table table-striped">
       <thead>
     <tr><th>Inicio de Clases</th>
     <th>Inscripción Ordinaria</th>
@@ -749,8 +757,8 @@
 <ul>
 <li>Exámenes de Ubicación: <b>Septiembre 10 al 16</b></li>
 <li>Inscripción Ordinaria: <b>Septiembre 10 al 30</b></li>
-</ul>
-<table class="table" style="width: 100%;">
+</ul><br>
+<table class="table table-striped">
       <thead>
     <tr><th>Inicio de Clases</th>
     <th>Inscripción Ordinaria</th>
@@ -771,7 +779,7 @@
         </td>
       </tr>
     </tbody>
-</table>
+</table><br>
 <p><b>ASUETOS</b></p>
 <ul>
 <li>15 de agosto Día de la Virgen de la Asunción</li>
