--- a/directorio-administrativo.html
+++ b/directorio-administrativo.html
@@ -640,11 +640,17 @@
             <div class="col-12">
               <h1 class="display-1 lh-1">
                 Directorio <b>Administrativo</b>
-              </h1><br>
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
+
+              <div class="alert alert-primary" role="alert">
+                <p><a href="directorio-centros-universitarios.html">Directorio de Centros Universitarios</a> | <a href="directorio-facultad-escuela.html">Directorio de Facultades y Escuelas</a></p>
+              </div>
+              
+
               <table class="table table-striped">
   <thead>
   <tr>
