--- a/directorio-centros-universitarios.html
+++ b/directorio-centros-universitarios.html
@@ -646,9 +646,13 @@
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <br>
-              <p>Directorio Facultad/Escuela | Directorio Administrativo</p>
-              <table>
+
+              <div class="alert alert-primary" role="alert">
+                <p><a href="directorio-administrativo.html">Directorio Administrativo</a> | <a href="directorio-facultad-escuela.html">Directorio de Facultades y Escuelas</a></p>
+              </div>
+
+
+              <table class="table table-striped">
   <thead>
   <tr>
 <th>Centro Universitario</th>
