--- a/directorio-facultad-escuela.html
+++ b/directorio-facultad-escuela.html
@@ -646,8 +646,12 @@
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
+
+              <div class="alert alert-primary" role="alert">
+                <p><a href="directorio-administrativo.html">Directorio Administrativo</a> | <a href="directorio-centros-universitarios.html">Directorio Centros Universitarios</a></p>
+              </div>
               
-              <table>
+              <table class="table table-striped"> 
   <thead>
   <tr>
 <th>Facultad/Escuela</th>
