--- a/info.html
+++ b/info.html
@@ -739,6 +739,7 @@
               <li><a href="solvencias.html">Solvencias</a> </li>
               <li><a href="talonario-de-pago.html">Talonario de pago</a></li>
                <li><a href="pronto-pago.html">Pronto pago</a></li> 
+               <li><a href="solicitud-de-devoluciones.html">Solicitud de devoluciones</a></li> 
           </ul>
           </div>
         </div>
@@ -808,6 +809,8 @@
             <ul class="lista-enlaces">
             
               <li><a href="evaluacion-de-ubicacion.html">Evaluación de Ubicación</a></li>
+              <li><a href="evaluacion-de-ubicacion-cc-medicas.html">Evaluación de Ubicación Facultad de Ciencias Médicas y de la Salud</a></li>
+              <li><a href="evaluacion-de-ubicacion-odontologia.html">Evaluación de Ubicación Facultad de Odontología</a></li>
             </ul>
           </div>
               </div>
