--- a/pronto-pago.html
+++ b/pronto-pago.html
@@ -761,7 +761,7 @@
           </div>
           <div class="nav z-index flex-row align-items-center">
             <div class="i18n text-light">
-              <a href="#" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="#" class="text-decoration-none text-light">ENG</a>
+              <a href="pronto-pago.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="promt-payment.html" class="text-decoration-none text-light">ENG</a>
             </div>
             <button class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
               <img src="img/miumg.svg" alt="miumg">
