--- a/solvencies.html
+++ b/solvencies.html
@@ -16,7 +16,7 @@
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -796,7 +796,7 @@
             <div class="col-12 fs-sm-5 text-secondary">
               <p>
                 How can I view issues related to my credit worthiness?</p>
-              <p>If you have any questions you can consult our <a href="#" target="_blank"> administrative directory</a></p>
+              <p>If you have any questions you can consult our <a href="directorio-administrativo.html"> administrative directory</a></p>
         </div>
       </article>
 
