Amatitlán en inglés.

--- a/amatitlan.en.html
+++ b/amatitlan.en.html
@@ -885,13 +885,13 @@
           <div class="row text-center">
             <div class="col-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 mb-3">
               <h2>
-                Elige la carrera </h2>
+                Find your university career</h2>
             </div>
           </div>
           <div class="row">
             <div class="col-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 ">
               <label for="carrera" class="form-label mb-1">
-                Seleccione una Carrera        </label>
+                Select a career       </label>
               <select name="carrera" id="carrera" class="form-select" aria-label="Seleccione una Carrera">
                 <option value="" selected>--</option>
                 <optgroup label="T&eacute;cnicos Universitarios">
@@ -902,7 +902,8 @@
             </div>
             <div class="col-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 mt-3">
               <label for="cu" class="form-label mb-1">
-                Seleccione jornada       </label>
+                
+Select a day      </label>
               <select name="cu" id="cu" class="form-select" aria-label="Seleccione Sede">
                 <option value="" selected>--</option>
                 <option>Matutina</option>
