Centros Universitarios en español e inglés. Arreglar errores.

--- a/amatitlan.html
+++ b/amatitlan.html
@@ -719,13 +719,13 @@
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>80</label> Aulas <br>modernas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Egresados </h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Egresados </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>9</label> Carreras <br>  activas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 ">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>57</label> Años al servicio<br> de la Educación</h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>57</label> Años al servicio<br> de la educación</h2>
             </div>
           </div>
 
@@ -888,7 +888,7 @@
           <div class="row">
             <div class="col-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 ">
               <label for="carrera" class="form-label mb-1">
-                Seleccione una Carrera        </label>
+                Seleccione una Facultad       </label>
               <select name="carrera" id="carrera" class="form-select" aria-label="Seleccione una Carrera">
                 <option value="" selected>--</option>
                 <optgroup label="T&eacute;cnicos Universitarios">
@@ -899,7 +899,7 @@
             </div>
             <div class="col-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 mt-3">
               <label for="cu" class="form-label mb-1">
-                Seleccione jornada       </label>
+                Seleccione Carrera      </label>
               <select name="cu" id="cu" class="form-select" aria-label="Seleccione Sede">
                 <option value="" selected>--</option>
                 <option>Matutina</option>
