--- a/info.en.html
+++ b/info.en.html
@@ -740,6 +740,7 @@
               <li><a href="solvencies.html">Solvencies</a> </li>
               <li><a href="payment-book.html">Payment book</a></li>
                <li><a href="promt-payment.html">Prompt payment</a></li> 
+               <li><a href="solicitud-de-devoluciones.html">Solicitud de devoluciones</a></li> 
           </ul>
           </div>
         </div>
@@ -809,6 +810,9 @@
             <ul class="lista-enlaces">
             
               <li><a href="evaluacion-de-ubicacion.html">Evaluación de Ubicación</a></li>
+              <li><a href="evaluacion-de-ubicacion-cc-medicas.html">Evaluación de Ubicación Facultad de Ciencias Médicas y de la Salud</a></li>
+              <li><a href="evaluacion-de-ubicacion-odontologia.html">Evaluación de Ubicación Facultad de Odontología</a></li>
+            </ul>
             </ul>
           </div>
               </div>
