--- a/amatitlan.en.html
+++ b/amatitlan.en.html
@@ -722,7 +722,7 @@
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>80</label> Modern <br>classrooms</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Graduates </h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Graduates </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>9</label> Active<br> careers</h2>
@@ -749,9 +749,9 @@
                  <p>3era. Avenida 9-33 Barrio "San Antonio", Amatitlán. <br> PBX: 6633-5775
                   <br><br> <a href="mailto:amatitlan@umg.edu.gt">amatitlan@umg.edu.gt</a>
                 </p>
-                 <br><p><strong>Office hours:</strong> Monday to Friday from  9:00 to 19:00<br>
-                  Saturday from  7:00 to 16:00<br>
-                  Sunday from 7:00 to 16:00
+                 <br><p><strong>Office hours:</strong> Monday to Friday from  9:00 to 19:00 hours.<br>
+                  Saturday from  7:00 to 16:00 hours.<br>
+                  Sunday from 7:00 to 16:00 hours.
                     
                 </p>
                 </div>
@@ -891,7 +891,7 @@
           <div class="row">
             <div class="col-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 ">
               <label for="carrera" class="form-label mb-1">
-                Select a career       </label>
+                Select a faculty      </label>
               <select name="carrera" id="carrera" class="form-select" aria-label="Seleccione una Carrera">
                 <option value="" selected>--</option>
                 <optgroup label="T&eacute;cnicos Universitarios">
@@ -902,8 +902,8 @@
             </div>
             <div class="col-12 col-md-8 offset-md-2 col-xl-6 offset-xl-3 mt-3">
               <label for="cu" class="form-label mb-1">
-                
-Select a day      </label>
+                Select a career
+   </label>
               <select name="cu" id="cu" class="form-select" aria-label="Seleccione Sede">
                 <option value="" selected>--</option>
                 <option>Matutina</option>
