--- a/peten.html
+++ b/peten.html
@@ -618,7 +618,7 @@
           </div>
           <div class="nav z-index flex-row align-items-center">
             <div class="i18n text-light">
-              <a href="index.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="index.en.html" class="text-decoration-none text-light">ENG</a>
+              <a href="peten.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="peten.en.html" class="text-decoration-none text-light">ENG</a>
             </div>
             <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
               <img src="img/miumg.svg" alt="miumg">
@@ -720,13 +720,13 @@
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>44</label> Aulas <br>modernas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Egresados </h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Egresados </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>20</label> Carreras <br>  activas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 ">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>57</label> Años al servicio<br> de la Educación</h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>57</label> Años al servicio<br> de la educación</h2>
             </div>
           </div>
 
@@ -743,8 +743,8 @@
     
               <div class="row">
                 <div class="col-6 contacto_info" style="border-right: 1px solid #2c557d;">
-                 <h4>Centro Petén</h4>
-                 <p>Dirección: 2da. ave. 4-30 zona 01, Santa Elena, Petén
+                 <h4>Petén</h4>
+                 <p>2da. ave. 4-30 zona 01, Santa Elena, Petén
                   <br> PBX:	7926-2303 / 7923-0283
                   <br><br> <a href="mailto:santa.rosita@umg.edu.gt">umgpeten@umg.edu.gt</a>
                 </p>
@@ -798,6 +798,7 @@
                   </li>
                 </ul>
               </nav>
+           </div>
             <div class="col-12 col-md-6 col-lg-4">
               <nav>
                 <h4>
