--- a/portales.html
+++ b/portales.html
@@ -618,7 +618,7 @@
           </div>
           <div class="nav z-index flex-row align-items-center">
             <div class="i18n text-light">
-              <a href="index.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="index.en.html" class="text-decoration-none text-light">ENG</a>
+              <a href="portales.html" class="text-decoration-none text-light fw-bold">ESP</a>/<a href="portales.en.html" class="text-decoration-none text-light">ENG</a>
             </div>
             <button onclick="document.location = 'https://umg.edu.gt/miumg/'" class="miumg align-items-center border border-0 d-flex px-2 rounded-0">
               <img src="img/miumg.svg" alt="miumg">
@@ -720,7 +720,7 @@
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>50</label> Aulas <br>modernas</h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3  datos-carrera">
-              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Egresados </h2>
+              <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>+70,000</label> Egresados </h2>
             </div>
             <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3 datos-carrera">
               <h2 class="counter pb-3 pb-sm-4 pb-md-5 text-center"><label>9</label> Carreras <br>  activas</h2>
